--- a/landmark.ipynb
+++ b/landmark.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
       "here jajajajja\n",
       "Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
       "below self.fc1\n",
-      "Linear(in_features=65536, out_features=500, bias=True)\n",
+      "Linear(in_features=150528, out_features=500, bias=True)\n",
       "Linear(in_features=500, out_features=50, bias=True)\n",
       "Net(\n",
       "  (conv1): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
@@ -405,9 +405,20 @@
       "  (conv3): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
       "  (dropout): Dropout(p=0.2)\n",
       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (fc1): Linear(in_features=65536, out_features=500, bias=True)\n",
+      "  (fc1): Linear(in_features=150528, out_features=500, bias=True)\n",
       "  (fc2): Linear(in_features=500, out_features=50, bias=True)\n",
       ")\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'use_cuda' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-db92e553d0de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[0;31m# move tensors to GPU if CUDA is available\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0muse_cuda\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m     \u001b[0mmodel_scratch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'use_cuda' is not defined"
      ]
     }
    ],
@@ -441,7 +452,7 @@
     "        hidden_1 = 500\n",
     "#         hidden_2 = 256\n",
     "        ## Define layers of a CNN\n",
-    "        self.fc1 = nn.Linear(32*32*64, hidden_1)\n",
+    "        self.fc1 = nn.Linear(224*224*3, hidden_1)\n",
     "        self.fc2 = nn.Linear(hidden_1, 50)\n",
     "#         self.fc3 = nn.Linear(28, 50)\n",
     "        #self.fc4 = nn.Linear(128, 10) # we have 50 classes, so we need 50 output nodes\n",
@@ -474,7 +485,7 @@
     "#         x = x.view(-1, 28 * 28)\n",
     "        \n",
     "#         print(x.size(0))\n",
-    "        x = x.view(x.shape[0], 224*224)\n",
+    "        x = x.view(x.shape[0], 224*224 *3)\n",
     "#         x = x.view(-1, 224 * 224 * 3)\n",
     "    \n",
     "        x = self.dropout(x)\n",
